<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstNum"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/op1"
        android:hint="@string/enterFirstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondNum"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/op2"
        android:hint="@string/enterSecondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <Button
            android:id="@+id/sumBtn"
            android:width="200dp"
            android:backgroundTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <Button
            android:id="@+id/minusBtn"
            android:width="200dp"
            android:backgroundTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <Button
            android:id="@+id/appBtn"
            android:width="200dp"
            android:backgroundTint="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app" />

        <Button
            android:id="@+id/delBtn"
            android:width="200dp"
            android:backgroundTint="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del" />
    </LinearLayout>

</LinearLayout>